<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lslidar_c16_driver</name>
  <version>1.2.0</version>
  <description>
    ROS device driver for LslidarC16 3D LIDARs.
  </description>
  <maintainer email="yutongyan@lslidar.com">Yutong</maintainer>
  <maintainer email="lzs_1993@qq.com">ZhenshengLee</maintainer>
  <author>Yutong</author>
  <license>GNU General Public License V3.0</license>
  <url type="website">http://www.ros.org/wiki/lslidar_c16</url>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>diagnostic_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>libpcap</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>tf2_ros</depend>
  <depend>lslidar_c16__msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
